# noise-streamer

./: .gitignore  AUTHORS  CHANGELOG.md  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  configure.ac
.github/workflows/: makefile.yml
.github/workflows-template/: makefile.yml
examples/: README.md  example.cpp
man/: <autotoolscpplibtemplate>.1  Makefile.am  noisestreamer.1
src/: Makefile.am  NoiseStreamer.cpp  NoiseStreamer.h  NoiseStreamerTask.cpp  NoiseStreamerTask.h  NoiseStreamerTaskRunner.cpp  NoiseStreamerTaskRunner.h  main.cpp
src/argument/: AgentArgument.cpp  AgentArgument.h  ClientArgument.cpp  ClientArgument.h  NoiseStreamerArgument.cpp  NoiseStreamerArgument.h  PlaylistAudioSourceArgument.cpp  PlaylistAudioSourceArgument.h
src/audio/: AudioBitrate.cpp  AudioBitrate.h  AudioBitrateConverter.cpp  AudioBitrateConverter.h  AudioEncodeMode.h  AudioSource.cpp  BufferSizes.h  CircularBuffer.cpp  CircularBuffer.h  CircularBuffer_v2.h  TrackMetadata.h
src/audio/decode/: AudioDecoder.cpp  AudioDecoder.h  AudioDecoderFactory.cpp  AudioDecoderFactory.h  DecodeMP3.cpp  DecodeMP3.h  MP3Decoder.cpp  MP3Decoder.h
src/audio/encode/: EncodeContext.h  NoiseStreamerEncoder.cpp  NoiseStreamerEncoder.h
src/audio/encode/liblame/: LibLame.cpp  LibLame.h
src/audio/playlist/: PlaylistHandler.cpp  PlaylistHandler.h  PlaylistItem.cpp  PlaylistItem.h  PlaylistStrategy.cpp  PlaylistStrategy.h  PlaylistStrategyFactory.cpp  PlaylistStrategyFactory.h  PlaylistStrategyType.cpp  PlaylistStrategyType.h  RandomOncePlaylistStrategy.cpp  RandomOncePlaylistStrategy.h  SimplePlaylistStrategy.cpp  SimplePlaylistStrategy.h
src/audio/resample/: resample.cpp  resample.h
src/audio/source/: AudioMetadataChangedEventArgs.h  AudioSource.cpp  AudioSource.h  PlaylistAudioSource.cpp  PlaylistAudioSource.h  PlaylistAudioSourceItem.cpp  PlaylistAudioSourceItem.h  PlaylistAudioSourceItemContext.h  PlaylistAudioSourceNavigator.cpp  PlaylistAudioSourceNavigator.h  PlaylistAudioSourceTask.cpp  PlaylistAudioSourceTask.h  PlaylistSource.cpp  PlaylistSource.h
src/audio/tag/: AudioTag.cpp  AudioTag.h  AudioTagReader.cpp  AudioTagReader.h
src/banner/: Banner.cpp  Banner.h
src/config/: NoiseStreamerConfig.cpp  NoiseStreamerConfig.h  PlaylistAudioSourceConfig.cpp  PlaylistAudioSourceConfig.h
src/excecutor/: Excecutor.cpp  Excecutor.h
src/exception/: NoiseStreamerException.cpp  NoiseStreamerException.h
src/health/: NoiseStreamerHealthPolicy.cpp  NoiseStreamerHealthPolicy.h
src/libshout/: LibShout.cpp  LibShout.h  LibShoutAudio.cpp  LibShoutCommunication.cpp  LibShoutConnection.cpp  LibShoutError.cpp  LibShoutFormat.cpp  LibShoutGeneralProperties.cpp  LibShoutInitialization.cpp  LibShoutMetadata.cpp  LibShoutProtocol.cpp
src/logger/: Logger.cpp  Logger.h
src/runmode/: AgentMode.cpp  AgentMode.h  AgentModeTask.cpp  AgentModeTask.h  AgentProtocol.cpp  AgentProtocol.h  ClientMode.cpp  ClientMode.h  InteractiveMode.cpp  InteractiveMode.h  RunMode.cpp  RunMode.h
src/scheduler/: ScheduleSlot.cpp  ScheduleSlot.h  ScheduleSlotChangedEventArgs.cpp  ScheduleSlotChangedEventArgs.h  Scheduler.cpp  Scheduler.h
src/utils/: File.cpp  File.h  FileHelper.cpp  FileHelper.h  StringHelper.cpp  StringHelper.h  SynchronizedPQueue.h  SynchronizedQueue.h  TaskHelper.cpp  TaskHelper.h  TimeHelper.cpp  TimeHelper.h
tests/: MainTestSuite.cpp  main.cpp  tester.sh
